Basic test of main window with a menu slided from left

--- a/SlidningMenuTest/res/layout/menu_frame.xml
+++ b/SlidningMenuTest/res/layout/menu_frame.xml
@@ -1,8 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/menu_frame"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical" >
-    
+    android:orientation="vertical"
+    android:background="#444444">
 
-</LinearLayout>
+<ListView
+    android:layout_margin="10sp"
+    android:padding="5sp"
+    android:id="@android:id/list"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:background="#000000" >
+
+</ListView>
+
+</FrameLayout>
